# smartcrop-pdf-desktop

./: .coverage  .gitignore  .~lock.Bugs_prev.odt#  ARCHITECTURE.md  BUG_ANALYSIS_phase1.md  Bugs.odt  Bugs_prev.odt  CLAUDE.MD  HANDOFF.md  Prompt.txt  README.md  TODO.md  app.py  bugs.txt  conftest.py  geometry.py  help_content.py  imaging.py  main.py  parsing.py  pdf_cropper.py  pyproject.toml  requirements.txt  test_UI.py  widgets.py
algorithms_test/: dewraper.py
core/: __init__.py  app.py  batch.py  canvas.py  constants.py  detect.py  document.py  document_state.py  drag.py  enums.py  errors.py  export.py  geometry.py  help_content.py  history.py  imaging.py  legacy_ttk_widgets.py  lru.py  model.py  parsing.py  render.py  settings.py  synthetic.py  theme.py  ui_build.py  viewmodel.py  widgets.py
core/docs/: SmartCrop_PDF_Specification_V9.md  SmartCrop_PDF_Test_Spec.md
docs/: SmartCropPDF_Goals.md  SmartCrop_PDF_Specification.md  SmartCrop_PDF_Specification_V9.md  SmartCrop_PDF_Test_Spec.md
old/algorithms_test/: process_image.py
smartcrop/: __init__.py  app.py  constants.py  imaging.py  parsing.py
tests/: conftest.py  helpers.py  test_app.py  test_architecture.py  test_enums.py  test_geometry.py  test_imaging.py  test_lru.py  test_parsing.py  test_pdf.py  test_property.py  test_real_pdfs.py  test_render.py  test_viewmodel.py
tests/bench/: _int8probe.py  _smoke.py  bench.py  docres_helpers.py  download_weights.py  engines.py
tests/core/: conftest.py  test_model_coverage.py  test_model_crop.py  test_model_document.py  test_model_export.py  test_model_fixes.py  test_model_gesture.py  test_model_history.py  test_model_pages.py  test_model_scan.py  test_model_split.py  test_units.py
ui/: __init__.py  app_window.py  canvas_view.py  config.py  constants.py  help_content.py  overlay.py  panels.py  ui_build.py
